--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ngneat/hot-toast": "^4.1.0",
     "@ngneat/overview": "^3.0.0",
     "@popperjs/core": "^2.10.2",
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.1.3",
     "firebase": "^9.9.1",
     "rxjs": "~7.5.0",
