--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "animate.css": "^4.1.1",
     "bootstrap": "^5.1.3",
     "firebase": "^9.9.1",
+    "ngx-pagination": "^6.0.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
